tests/ui/invalid_pyclass_new.rs
use pyo3::prelude::*;

#[pyclass]
struct InvalidNewReturn;

struct Invalid;

#[pymethods]
impl InvalidNewReturn {
    #[new]
    fn new() -> Invalid {
        //~^ ERROR: `Invalid` cannot be used as the return value for `#[new]` methods
        Invalid
    }
}

fn main() {}
